tests/live-agent/snapshots/e2e__audit__codex_block_loopback_egress.snap
---
source: crates/firma/../../tests/live-agent/audit.rs
expression: self
---
FirmaAuditTrail(
    {
        AuditEvent {
            action: "network.loopback",
            resource: "tcp:127.0.0.1:<tcp-port>",
            decision: Deny,
            deny_reason: "loopback blocked",
            dispatch_status: 0,
        },
    },
)
