tests/live-agent/snapshots/e2e__audit__codex_deny_http_call.snap
---
source: crates/firma/../../tests/live-agent/audit.rs
expression: self
---
FirmaAuditTrail(
    {
        AuditEvent {
            action: "communication.internal.send",
            resource: "127.0.0.1:<mock-port>/deny",
            decision: Deny,
            deny_reason: "policy denied: policy denied action 'communication.internal.send' on resource '127.0.0.1:<mock-port>/deny'",
            dispatch_status: 0,
        },
    },
)
