tests/live-agent/snapshots/e2e__audit__codex_simple_prompt.snap
---
source: crates/firma/../../tests/live-agent/audit.rs
expression: self
---
FirmaAuditTrail(
    {},
)
